Fix word wrap

--- a/src/ConfirmModal/index.scss
+++ b/src/ConfirmModal/index.scss
@@ -28,6 +28,7 @@
       font-weight: 500;
       color: rgb(var(--zn-text-heading));
       margin-bottom: 15px;
+      white-space: normal;
     }
 
     p {
